--- a/app/views/events/_event_comments.html.erb
+++ b/app/views/events/_event_comments.html.erb
@@ -26,7 +26,7 @@
     <div class="card-footer">
       <div class="collapse" id="event_comments_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "events/event_comments_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
