--- a/app/views/events/_event_guests.html.erb
+++ b/app/views/events/_event_guests.html.erb
@@ -15,8 +15,10 @@
         <!-- Show link end -->
 
         <!-- Delete link start -->
-        <%= link_to interest, method: :delete, data: { confirm: "Do you really want to delete this interest" } do %>
-          <i class="fas fa-trash-alt"></i>
+        <% if current_user == interest.guest %>
+          <%= link_to interest, method: :delete do %>
+            <i class="fas fa-trash-alt"></i>
+          <% end %>
         <% end %>
         <!-- Delete link end -->
 
